--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
           <h2>Experience</h2>
         </div>
         <div class="timeline">
+          <div class="timeline-item right">
+            <div class="timeline-content">
+              <span class="date">Jan, 2023 - May, 2024</span>
+              <h3>Rutgers University</h3>
+              <p><strong>Parttime Lecturer</strong></p>
+              <p>Responsible for conducting recitations for the Discrete Structures II course and 
+                grading for the Design and Analysis of Computer Algorithms course. Managed office hours, providing support to over 80 students weekly.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="timeline">
           <div class="timeline-item left">
             <div class="timeline-content">
               <span class="date">July, 2021 - Aug, 2022</span>
@@ -172,6 +184,18 @@
                 Managed over 30 application functions for administrators and vendors, optimizing user roles and operations. 
                 Reduced registration time by 30% through email-delivered passwords, enhancing user accessibility. Efficiently managed store data, enabling data export and oversight across multiple locations. 
                 Achieved a 20% reduction in page load times and a 30% increase in user engagement through advanced web optimization and seamless features. Optimized the web application using Spring Boot, Hibernate, MySQL, and HTML/CSS.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="timeline">
+          <div class="timeline-item right">
+            <div class="timeline-content">
+              <span class="date">Jan, 2021 - July, 2021</span>
+              <h3>Pedesis</h3>
+              <p><strong>Software Developer</strong></p>
+              <p>Developed user stories and conducted unit testing for various applications. Examined and recommended patches for existing code, designing overhauls for broken code. Utilized IntelliJ IDEA for story development, Postman for API testing, and GitLab CI/CD for version control. Successfully resolved 100% of bugs and spikes, 
+                actively participating in daily standups and sprint retrospective meetings. Engaged in all scrum ceremonies, including backlog refinement and sprint planning.
               </p>
             </div>
           </div>
