--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
         <div class="section-title">
           <h2>Experience</h2>
         </div>
+           <div class="timeline">
+          <div class="timeline-item left">
+            <div class="timeline-content">
+              <span class="date">Aug, 2024 - Present</span>
+              <h3>Synechon</h3>
+              <p><strong>Software Engineer</strong></p>
+              <p>Contributing to Bank of America's large-scale banking project by developing and maintaining web applications, websites, and CMS platforms to improve user engagement and system functionality. Designing custom components using Java, HTL, and web frameworks, and implemented content fragment models and templates to enable dynamic content delivery, reducing manual updates by 25%. Streamlined content approval and publishing through automated workflows, cutting time-to-market by 40%. Additionally, applied performance optimization techniques such as caching, image optimization, and lazy loading.</p>
+            </div>
+          </div>
+        </div>
         <div class="timeline">
           <div class="timeline-item right">
             <div class="timeline-content">
