--- a/index.html
+++ b/index.html
@@ -1,280 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sai Nikhil Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sai Nikhil Emukapati Portfolio</title>
 
-  <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background: #f5f6fa;
-      scroll-behavior: smooth;
-    }
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    /* NAVBAR */
-    .navbar {
-      background: #0d1117;
-      padding: 15px 20px;
-    }
-    .navbar a {
-      color: #fff !important;
-      font-weight: 500;
-    }
-    .navbar a.active {
-      color: #00aaff !important;
-    }
+    <!-- Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 
-    /* HERO */
-    #hero {
-      height: 100vh;
-      background: linear-gradient(135deg, #0d1117, #1f2937);
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-    #hero h1 {
-      font-size: 3.2rem;
-      font-weight: 700;
-    }
-    #hero h2 {
-      font-size: 1.6rem;
-      font-weight: 300;
-    }
-
-    /* SECTION HEADINGS */
-    .section-title h2 {
-      font-weight: 700;
-      text-align: center;
-      color: #0d1117;
-      margin-bottom: 40px;
-      font-size: 2.4rem;
-    }
-
-    /* ABOUT */
-    #about {
-      background: white;
-      padding: 80px 20px;
-    }
-    #about p {
-      max-width: 900px;
-      margin: 0 auto;
-      font-size: 1.1rem;
-    }
-
-    /* SKILLS */
-    #skills {
-      background: #0d1117;
-      padding: 80px 20px;
-      color: white;
-    }
-    .skill-card {
-      background: #1f2937;
-      border-radius: 15px;
-      padding: 20px;
-      text-align: center;
-      transition: 0.3s;
-    }
-    .skill-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    }
-    .skill-card i {
-      font-size: 40px;
-      margin-bottom: 10px;
-      color: #00aaff;
-    }
-
-    /* EXPERIENCE / EDUCATION */
-    .timeline {
-      border-left: 4px solid #00aaff;
-      padding-left: 30px;
-      margin-left: 20px;
-    }
-    .timeline-item {
-      margin-bottom: 40px;
-    }
-    .timeline-item h4 {
-      font-weight: 600;
-    }
-    .timeline-item span {
-      font-weight: 600;
-      color: #00aaff;
-    }
-
-    /* PROJECTS */
-    #projects .card {
-      border-radius: 12px;
-      overflow: hidden;
-      transition: 0.3s;
-    }
-    #projects .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 18px rgba(0,0,0,0.15);
-    }
-
-    /* FOOTER */
-    footer {
-      background: #0d1117;
-      color: #ccc;
-      text-align: center;
-      padding: 20px;
-      margin-top: 50px;
-    }
-  </style>
+    <style>
+        body {
+            background: #0f0f0f;
+            color: #e1e1e1;
+            font-family: 'Segoe UI', sans-serif;
+        }
+        nav {
+            background: #111;
+        }
+        .navbar-nav .nav-link {
+            color: #e1e1e1;
+            margin-right: 20px;
+            font-weight: 500;
+        }
+        .navbar-nav .nav-link:hover {
+            color: #00c6ff;
+        }
+        .section-title {
+            font-size: 32px;
+            font-weight: 700;
+            margin-bottom: 20px;
+            color: #00c6ff;
+        }
+        .hero {
+            padding: 120px 20px;
+            text-align: center;
+            background: linear-gradient(135deg, #001f30, #000000 70%);
+        }
+        .hero h1 {
+            font-size: 50px;
+            font-weight: 800;
+        }
+        .hero h2 {
+            color: #00c6ff;
+        }
+        .skill-card {
+            background: #181818;
+            padding: 20px;
+            border-radius: 12px;
+            height: 100%;
+            border: 1px solid #222;
+            transition: 0.3s;
+        }
+        .skill-card:hover {
+            transform: translateY(-5px);
+            border-color: #00c6ff;
+        }
+        .project-card {
+            background: #181818;
+            padding: 20px;
+            border-radius: 12px;
+            border: 1px solid #222;
+            transition: 0.3s;
+            height: 100%;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            border-color: #00c6ff;
+        }
+        footer {
+            padding: 30px;
+            text-align: center;
+            background: #111;
+            margin-top: 50px;
+        }
+    </style>
 </head>
+
 <body>
-
-<!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#hero">SAI</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navMenu">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-        <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<!-- HERO -->
-<section id="hero">
-  <div>
-    <h1>Sai Nikhil</h1>
-    <h2>I'm <span id="typed"></span></h2>
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section id="about">
-  <div class="section-title"><h2>About Me</h2></div>
-  <p class="text-center">Hi, I'm Sai Nikhil Emukapati, a Software Engineer passionate about solving problems and building meaningful systems. I love working with full‑stack development, backend systems, and designing impactful user experiences.</p>
-</section>
-
-<!-- SKILLS -->
-<section id="skills">
-  <div class="section-title text-white"><h2>Skills</h2></div>
-
-  <div class="container">
-    <div class="row g-4">
-
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-code-slash"></i><p>Java</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-filetype-py"></i><p>Python</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-braces"></i><p>JavaScript</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-hdd-network"></i><p>NodeJS</p></div></div>
-
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-filetype-html"></i><p>HTML</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-filetype-css"></i><p>CSS</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-database"></i><p>MySQL</p></div></div>
-      <div class="col-6 col-md-3"><div class="skill-card"><i class="bi bi-pc-display"></i><p>ExpressJS</p></div></div>
-
-    </div>
-  </div>
-</section>
-
-<!-- EXPERIENCE -->
-<section id="experience" class="container py-5">
-  <div class="section-title"><h2>Experience</h2></div>
-
-  <div class="timeline">
-    <div class="timeline-item">
-      <span>Aug 2024 – Present</span>
-      <h4>Synechron — Software Engineer</h4>
-      <p>Developing large‑scale applications for Bank of America involving component design, performance optimization, caching, lazy loading, and workflow automation.</p>
-    </div>
-
-    <div class="timeline-item">
-      <span>Jan 2023 – May 2024</span>
-      <h4>Rutgers University — Part-time Lecturer</h4>
-      <p>Conducted recitations, graded coursework, and supported 80+ students weekly in algorithmic problem‑solving.</p>
-    </div>
-
-    <div class="timeline-item">
-      <span>Jul 2021 – Aug 2022</span>
-      <h4>Scriptbees — Software Engineer</h4>
-      <p>Developed an eCommerce system increasing engagement by 20%, optimized load times, and built admin/vendor tools.</p>
-    </div>
-
-    <div class="timeline-item">
-      <span>Jan 2021 – Jul 2021</span>
-      <h4>Pedesis — Software Developer</h4>
-      <p>Created user stories, fixed bugs, performed unit testing, and worked with CI/CD pipelines.</p>
-    </div>
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section id="projects" class="container py-5">
-  <div class="section-title"><h2>Projects</h2></div>
-
-  <div class="row g-4">
-
-    <div class="col-md-6 col-lg-4">
-      <div class="card">
-        <img src="Images/Reyoca_Rental.jpg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Car Rental Website — REYOCA</h5>
-          <p class="card-text">A full‑stack car‑sharing platform using NodeJS, MySQL, AWS.</p>
-          <a href="https://github.com/Nikhil-5400/Reyoca_CarRental" target="_blank" class="btn btn-outline-primary">View Project</a>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold text-info" href="#">SN</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
-    </div>
+    </nav>
 
-    <div class="col-md-6 col-lg-4">
-      <div class="card">
-        <img src="Images/Airline Management System.png" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Airline Management System</h5>
-          <p class="card-text">Desktop application for managing passengers, flights, and bookings.</p>
-          <a href="https://github.com/Nikhil-5400/Airline-Management-System" target="_blank" class="btn btn-outline-primary">View Project</a>
+    <!-- HERO SECTION -->
+    <section id="hero" class="hero">
+        <div class="container">
+            <h1>Sai Nikhil Emukapati</h1>
+            <h2 class="mt-3">Software Engineer & AI Developer</h2>
+            <p class="mt-3">Building Intelligent Systems • Full-Stack Development • Machine Learning</p>
         </div>
-      </div>
-    </div>
+    </section>
 
-  </div>
-</section>
+    <!-- SKILLS SECTION -->
+    <section id="skills" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Skills</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">Programming</h4>
+                        <p>Python, Java, JavaScript, C, C++</p>
+                    </div>
+                </div>
 
-<!-- EDUCATION -->
-<section id="education" class="container py-5">
-  <div class="section-title"><h2>Education</h2></div>
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">AI / ML</h4>
+                        <p>TensorFlow, PyTorch, NLP, LLMs, Model Training, Fine-tuning</p>
+                    </div>
+                </div>
 
-  <div class="timeline">
-    <div class="timeline-item">
-      <span>2022 – 2024</span>
-      <h4>Rutgers University</h4>
-      <p>Master of Science in Computer Science.</p>
-    </div>
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">Web Development</h4>
+                        <p>React, Node.js, Express, Bootstrap, REST APIs</p>
+                    </div>
+                </div>
 
-    <div class="timeline-item">
-      <span>2018 – 2022</span>
-      <h4>National Institute of Technology, Raipur</h4>
-      <p>B.Tech in Electronics and Communication Engineering.</p>
-    </div>
-  </div>
-</section>
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">Cloud / DevOps</h4>
+                        <p>AWS, Docker, GitHub Actions, CI/CD</p>
+                    </div>
+                </div>
 
-<!-- RESUME -->
-<section id="resume" class="container py-5">
-  <div class="section-title"><h2>Resume</h2></div>
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">Databases</h4>
+                        <p>MySQL, PostgreSQL, MongoDB, Firebase</p>
+                    </div>
+                </div>
 
-  <div class="ratio ratio-16x9">
-    <iframe src="https://drive.google.com/file/d/1TYYfN3vuu6Om_K9QP6HSPv5L7LfHNU8i/preview" allow="autoplay"></iframe>
-  </div>
+                <div class="col-md-4">
+                    <div class="skill-card">
+                        <h4 class="text-info">Tools</h4>
+                        <p>Git, Postman, Linux, VS Code, Jira</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <div class="mt-3 text-center">
-    <a href="https://drive
+    <!-- EXPERIENCE SECTION -->
+    <section id="experience" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Experience</h2>
+
+            <div class="project-card mb-4">
+                <h4 class="text-info">AI Intern – TCS</h4>
+                <p><strong>2023 – 2024</strong></p>
+                <p>Worked on AI-driven automation, NLP pipelines, chatbot development, and model optimization for enterprise workflows.</p>
+            </div>
+
+            <div class="project-card mb-4">
+                <h4 class="text-info">Software Engineer Intern – Cognizant</h4>
+                <p><strong>2022 – 2023</strong></p>
+                <p>Developed internal dashboards, APIs, and automation tools. Improved backend performance and integrated authentication flows.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- PROJECTS SECTION -->
+    <section id="projects" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Projects</h2>
+            <div class="row g-4">
+
+                <div class="col-md-6">
+                    <div class="project-card">
+                        <h4 class="text-info">AI Resume Analyzer</h4>
+                        <p>Built an LLM-powered resume screening tool that matches resumes to job descriptions and ranks candidates automatically.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="project-card">
+                        <h4 class="text-info">Smart Chatbot Assistant</h4>
+                        <p>Developed a domain-specific chatbot using NLP, embeddings, and vector search with Python & Flask.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="project-card">
+                        <h4 class="text-info">Full-Stack Task Manager</h4>
+                        <p>React + Node.js application with JWT auth, analytics dashboard, and real-time updates.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- EDUCATION SECTION -->
+    <section id="education" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+
+            <div class="project-card mb-4">
+                <h4 class="text-info">Master's in Computer Science</h4>
+                <p><strong>University of the Cumberlands</strong></p>
+            </div>
+
+            <div class="project-card mb-4">
+                <h4 class="text-info">Bachelor of Technology – CSE</h4>
+                <p><strong>JNTU</strong></p>
+            </div>
+        </div>
+    </section>
+
+    <!-- RESUME SECTION -->
+    <section id="resume" class="py-5 text-center">
+        <div class="container">
+            <h2 class="section-title">Resume</h2>
+            <a class="btn btn-info px-4 py-2" href="#">Download Resume</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 Sai Nikhil Emukapati • Portfolio</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
